Fix countries and regions rankings components overflow

--- a/src/app/rankings/countries-rank/countries-rank.component.scss
+++ b/src/app/rankings/countries-rank/countries-rank.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: flex;
+  overflow-y: auto;
+}
+
 .ranking-wrapper {
   display: flex;
   flex-flow: column;
@@ -5,6 +10,7 @@
   padding: 1rem 1rem 0 1rem;
   border-radius: 1rem;
   overflow-y: auto;
+  width: 100%;
 }
 
 .ranking-header {
