--- a/src/app/rankings/regions-rank/regions-rank.component.scss
+++ b/src/app/rankings/regions-rank/regions-rank.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: flex;
+  overflow-y: auto;
+}
+
 .ranking {
   display: flex;
   flex-flow: column;
@@ -5,6 +10,7 @@
   padding: 1rem;
   border-radius: 1rem;
   overflow-y: auto;
+  width: 100%;
 }
 
 .ranking-header {
